--- a/pages/chatAI.html
+++ b/pages/chatAI.html
@@ -42,49 +42,49 @@
                 <div class="box_cb">
                     <p>Thị Mầu - Hòa Minzy x Masew | Official Music Video</p>
                     <div class="name_web">
-                        <img src="/dist/img/youtube.png" alt="">
+                        <img src="./img/youtube.png" alt="">
                         <span>youtube</span>
                     </div>
                 </div>
                 <div class="box_cb">
                     <p>Thị Mầu - Hòa Minzy x Masew | Official Music Video</p>
                     <div class="name_web">
-                        <img src="/dist/img/youtube.png" alt="">
+                        <img src="./img/youtube.png" alt="">
                         <span>youtube</span>
                     </div>
                 </div>
                 <div class="box_cb">
                     <p>Thị Mầu - Hòa Minzy x Masew | Official Music Video</p>
                     <div class="name_web">
-                        <img src="/dist/img/youtube.png" alt="">
+                        <img src="./img/youtube.png" alt="">
                         <span>youtube</span>
                     </div>
                 </div>
                 <div class="box_cb">
                     <p>Thị Mầu - Hòa Minzy x Masew | Official Music Video</p>
                     <div class="name_web">
-                        <img src="/dist/img/youtube.png" alt="">
+                        <img src="./img/youtube.png" alt="">
                         <span>youtube</span>
                     </div>
                 </div>
                 <div class="box_cb">
                     <p>Thị Mầu - Hòa Minzy x Masew | Official Music Video</p>
                     <div class="name_web">
-                        <img src="/dist/img/youtube.png" alt="">
+                        <img src="./img/youtube.png" alt="">
                         <span>youtube</span>
                     </div>
                 </div>
                 <div class="box_cb">
                     <p>Thị Mầu - Hòa Minzy x Masew | Official Music Video</p>
                     <div class="name_web">
-                        <img src="/dist/img/youtube.png" alt="">
+                        <img src="./img/youtube.png" alt="">
                         <span>youtube</span>
                     </div>
                 </div>
                 <div class="box_cb">
                     <p>Thị Mầu - Hòa Minzy x Masew | Official Music Video</p>
                     <div class="name_web">
-                        <img src="/dist/img/youtube.png" alt="">
+                        <img src="./img/youtube.png" alt="">
                         <span>youtube</span>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
     <!-- ************************************************************************** -->
     <div class="checkbox">
         <div class="fixed_checkbox">
-            <textarea onclick="replace_row_textarea()" id="myTextarea" class="border-2" name="" cols="30" rows="1"
+            <textarea class="chat_askAI" id="myTextarea" onclick="replace_row_textarea()" name="" cols="30" rows="1"
                 placeholder="Ask follow-up..."></textarea>
 
             <button class="btn_checkbox location-first" onchange="replaceColorCopilot()">
