--- a/pages/index.html
+++ b/pages/index.html
@@ -3,8 +3,8 @@
         <h1 class="text-4xl">Where knowledge begins</h1>
     </div>
     <div class="relative">
-        <textarea class="input_user border-2" name="" id="" cols="30" rows="10" placeholder="Ask anything..."
-            style="height: 114px !important;"></textarea>
+        <textarea id="myTextarea" class="input_user border-2" name="" id="" cols="30" rows="1" placeholder="Ask anything..."
+            style="min-height: 114px !important;" onclick="replace_row_textarea()"></textarea>
         <button class="inp_buttom btn_focus">
             <i class="fa-solid fa-magnifying-glass"></i> Focus
         </button>
